[gd_scene load_steps=17 format=3 uid="uid://f3a1nh650365"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_4o5i2"]
[ext_resource type="Texture2D" uid="uid://cq35nnt5vfjbp" path="res://assets/blocks/vaus normal.png" id="2_xrm02"]
[ext_resource type="Texture2D" uid="uid://n86nqr1d3x4s" path="res://assets/blocks/vaus extendido.png" id="3_2aavy"]
[ext_resource type="Texture2D" uid="uid://cn7fq1olp6uxk" path="res://assets/blocks/vaus armado laser.png" id="4_27g5h"]
[ext_resource type="Texture2D" uid="uid://bxke1ymcqit58" path="res://assets/blocks/transforma a arma.png" id="5_e5s0c"]
[ext_resource type="Texture2D" uid="uid://dgruhq8t5160s" path="res://assets/blocks/vaus anim inicio.png" id="6_mvu0n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_or1yy"]
height = 70.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2phxo"]
height = 116.0

[sub_resource type="Animation" id="Animation_1bnp4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VausNormal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VausExtendido:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransformaAArma:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VausArmadoLaser:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VausAnimInicio:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_cu7dj"]
resource_name = "inicio"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VausAnimInicio:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3), Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_06tex"]
resource_name = "vaus a laser"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransformaAArma:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_tndqa"]
resource_name = "vaus grande"
length = 1.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VausExtendido:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_57vbm"]
resource_name = "vaus laser"
length = 1.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VausArmadoLaser:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_non64"]
resource_name = "vaus laser a normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransformaAArma:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_s7mxv"]
resource_name = "vaus normal"
length = 1.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VausNormal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xysb0"]
_data = {
"RESET": SubResource("Animation_1bnp4"),
"inicio": SubResource("Animation_cu7dj"),
"vaus a laser": SubResource("Animation_06tex"),
"vaus grande": SubResource("Animation_tndqa"),
"vaus laser": SubResource("Animation_57vbm"),
"vaus laser a normal": SubResource("Animation_non64"),
"vaus normal": SubResource("Animation_s7mxv")
}

[node name="Player" type="CharacterBody2D"]
visibility_layer = 2
z_index = 2
rotation = 1.5708
disable_mode = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_4o5i2")
metadata/_edit_lock_ = true

[node name="VausNormal" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
rotation = -1.5708
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_xrm02")
vframes = 6
frame = 1

[node name="VausExtendido" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
rotation = -1.5708
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_2aavy")
vframes = 6
frame = 1

[node name="VausArmadoLaser" type="Sprite2D" parent="."]
visibility_layer = 2
rotation = -1.5708
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_27g5h")
vframes = 6

[node name="TransformaAArma" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
rotation = -1.5708
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_e5s0c")
vframes = 9
frame = 1

[node name="VausAnimInicio" type="Sprite2D" parent="."]
visible = false
visibility_layer = 2
position = Vector2(3.8147e-06, 3.8147e-06)
rotation = -1.5708
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_mvu0n")
vframes = 5
frame = 1

[node name="CollisionShape2DNormal" type="CollisionShape2D" parent="."]
visible = false
visibility_layer = 2
position = Vector2(-4.99998, 5.00002)
shape = SubResource("CapsuleShape2D_or1yy")

[node name="CollisionShape2DExtendido" type="CollisionShape2D" parent="."]
visible = false
visibility_layer = 2
position = Vector2(-4.99998, 5.00002)
shape = SubResource("CapsuleShape2D_2phxo")
disabled = true

[node name="CollisionShape2DLaser" type="CollisionShape2D" parent="."]
visible = false
visibility_layer = 2
position = Vector2(-4.99998, 5.00002)
shape = SubResource("CapsuleShape2D_or1yy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xysb0")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
